--- a/sec/related_work.tex
+++ b/sec/related_work.tex
@@ -42,6 +42,13 @@ Both Csmith and CLsmith use unrealistic safe-math macros to wrap arithmetic oper
 
 CLsmith makes it impossible for thread ID to modify control flow. However, in almost all real world codes, this is not the case. This is a big restriction.
 
+GPU Concurrency --- Small \emph{litmus tests}~\cite{Alglave2015}.
+
+MACHINE LEARNING IN COMPILER TESTING: Machine learning selectively unsound static analysis~\cite{Heo2017}, Learning a classifier for static analyzers~\cite{Koc2017}.
+Transforming program repair ingredients with DL~\cite{White}. Program repair~\cite{Koukoutos2017a}.
+
+Learning to prioritize test programs~\cite{Chen2017}.
+
 % \paragraph{DeepSmith}
 DeepSmith extends prior work in program synthesis for performance benchmarking~\cite{Cummins2017a}. LLVM is used as an oracle to determine if program is well formed. Behaviour is validated using runtime checks, with no desire for correctness. We extend this \cc{\ldots}. Syntactic level modeling has been shown useful for identifying optimization characteristics~\cite{Cummins2017b}.
 
