Update on Overleaf.

--- a/refs.bib
+++ b/refs.bib
@@ -11649,9 +11649,8 @@
 @article{Koukoutos2017a,
     title = {{On Repair with Probabilistic Attribute Grammars}},
     year = {2017},
-    author = {Koukoutos, Manos and Raghothaman, Mukund and Kneuss, Etienne and Kuncak, Viktor},
-    url = {http://arxiv.org/abs/1707.04148},
-    arxivId = {1707.04148}
+    journal = {arXiv:1707.04148},
+    author = {Koukoutos, M. and Raghothaman, M. and Kneuss, E. and Kuncak, V.}
 }
 
 @inproceedings{Le2015,
@@ -11665,10 +11664,8 @@
 @article{Pei2017,
     title = {{DeepXplore: Automated Whitebox Testing of Deep Learning Systems}},
     year = {2017},
-    journal = {arXiv 1705.06640},
-    author = {Pei, Kexin and Cao, Yinzhi and Yang, Junfeng and Jana, Suman},
-    url = {http://arxiv.org/abs/1705.06640},
-    arxivId = {1705.06640}
+    journal = {arXiv:1705.06640},
+    author = {Pei, K. and Cao, Y. and Yang, J. and Jana, S.}
 }
 
 @inproceedings{Godefroid2008a,
@@ -11682,112 +11679,103 @@
     keywords = {all or part of, automatic test generation, grammars, is granted without fee, or hard copies of, permission to make digital, personal or classroom use, program verification, provided that copies are, software testing, this work for}
 }
 
-@article{Chen2017,
+@inproceedings{Chen2017,
     title = {{Learning to Prioritize Test Programs for Compiler Testing}},
     year = {2017},
-    journal = {Icse},
-    author = {Chen, Junjie and Bai, Yanwei and Hao, Dan and Xiong, Yingfei and Zhang, Hongyu and Xie, Bing},
-    pages = {700--711},
-    isbn = {978-1-5386-3868-2},
-    doi = {10.1109/ICSE.2017.70}
+    booktitle = {ICSE},
+    author = {Chen, Junjie and Bai, Yanwei and Hao, Dan and Xiong, Yingfei and Zhang, Hongyu and Xie, Bing}
 }
 
 @article{White,
     title = {{Sorting and Transforming Program Repair Ingredients via Deep Learning Code Similarities}},
-    author = {White, Martin and Tufano, Michele and Mart{\'{i}}nez, Matías and Monperrus, Martin and Poshyvanyk, Denys},
+    journal = {arXiv:1707.04742},
+    author = {White, M. and Tufano, M. and Mart{\'{i}}nez, M. and Monperrus, M. and Poshyvanyk, D.},
     arxivId = {arXiv:1707.04742v1}
 }
 
-@article{Sahoo2013,
-    title = {{Using likely invariants for automated software fault localization}},
+@inproceedings{Sahoo2013,
+    title = {{Using Likely Invariants for Automated Software Fault Localization}},
     year = {2013},
-    journal = {Asplos},
-    author = {Sahoo, Swarup Kumar and Criswell, John and Geigle, Chase and Adve, Vikram},
-    pages = {139},
-    url = {http://dl.acm.org/citation.cfm?doid=2451116.2451131},
-    isbn = {9781450318709},
-    doi = {10.1145/2451116.2451131},
-    issn = {0362-1340},
+    booktitle = {ASPLOS},
+    author = {Sahoo, S. K. and Criswell, J. and Geigle, C. and Adve, V.},
     keywords = {bug diagnosis, debugging, fault localization, invariants, program analysis, root cause, software reliability, testing}
 }
 
 @article{Huo,
-    title = {{Enhancing the Unified Features to Locate Buggy Files by Exploiting the Sequential Nature of Source Code ∗}},
+    title = {{Enhancing the Unified Features to Locate Buggy Files by Exploiting the Sequential Nature of Source Code}},
     author = {Huo, Xuan and Li, Ming}
 }
 
 @inproceedings{Koc2017,
-    title = {{Learning a classifier for false positive error reports emitted by static code analysis tools}},
+    title = {{Learning a Classifier for False Positive Error Reports Emitted by Static Code Analysis Tools}},
     year = {2017},
     booktitle = {MAPL},
-    author = {Koc, Ugur and Saadatpanah, Parsa and Foster, Jeffrey S. and Porter, Adam A.},
-    url = {http://dl.acm.org/citation.cfm?doid=3088525.3088675},
-    isbn = {9781450350716},
-    doi = {10.1145/3088525.3088675},
+    author = {Koc, U. and Saadatpanah, P. and Foster, J. S. and Porter, A. A.},
     keywords = {classifier, long short-term memories, naive bayes, program slicing, static code analysis}
 }
 
-@article{Zhangb,
+@inproceedings{Zhangb,
     title = {{Automated Transplantation and Differential Testing for Clones}},
-    journal = {Proceedings of the 39th International Conference on Software Engineering (ICSE'17)},
-    author = {Zhang, Tianyi and Kim, Miryung},
-    url = {http://web.cs.ucla.edu/~tianyi.zhang/grafter.pdf},
-    isbn = {978-1-5386-3868-2},
-    doi = {10.1109/ICSE.2017.67}
+    year = {2017},
+    booktitle = {ICSE},
+    author = {Zhang, T. and Kim, M.}
 }
 
-@article{Heo2017a,
+@inproceedings{Heo2017a,
     title = {{Machine-Learning-Guided Selectively Unsound Static Analysis}},
     year = {2017},
-    journal = {Icse},
-    author = {Heo, Kihong and Oh, Hakjoo and Yi, Kwangkeun},
-    pages = {519--529},
+    booktitle = {ICSE},
+    author = {Heo, K. and Oh, H. and Yi, K.},
     isbn = {978-1-5386-3868-2},
     doi = {10.1109/ICSE.2017.54},
     keywords = {-static analysis, machine learning, unsoundness}
 }
 
-@article{Cadar2016a,
+@inproceedings{Cadar2016a,
     title = {{Analysing the Program Analyser}},
     year = {2016},
-    journal = {ICSE},
+    booktitle = {ICSE},
     author = {Cadar, C. and Donaldson, A.},
     keywords = {cross-checking, program analysis, program generators, program transformations, testing}
 }
 
-@article{Rojas2017,
+@inproceedings{Rojas2017,
     title = {{Code Defenders: Crowdsourcing Effective Tests and Subtle Mutants with a Mutation Testing Game}},
     year = {2017},
-    journal = {Proceedings of the 39th International Conference on Software Engineering},
-    author = {Rojas, José Miguel and White, Thomas D and Clegg, Benjamin S and Fraser, Gordon},
-    pages = {677--688},
-    url = {https://doi.org/10.1109/ICSE.2017.68},
-    isbn = {978-1-5386-3868-2},
-    doi = {10.1109/ICSE.2017.68}
+    booktitle = {ICSE},
+    author = {Rojas, J. M. and White, T. D. and Clegg, B. S and Fraser, G.}
 }
 
-@article{Nandi2017,
+@inproceedings{Nandi2017,
     title = {{Debugging Probabilistic Programs}},
     year = {2017},
-    author = {Nandi, Chandrakana and Grossman, Dan and Sampson, Adrian},
+    booktitle = {MAPL},
+    author = {Nandi, C. and Grossman, D. and Sampson, A. and Mytkowicz, T. and McKinley, K. S.},
     keywords = {debugging, probabilistic programming, program analy-, sis, statistical inference}
 }
 
-@article{Barik2017,
-    title = {{Do Developers Read Compiler Error Messages ?}},
+@techreport{McNally2012,
+    title = {{Fuzzing: The State of the Art}},
+    year = {2012},
+    booktitle = {Defense Science and Technology Organisation (Australia)},
+    author = {McNally, R. and Yiu, K. and Grove, D. and Gerhardy, D.}
+}
+
+@inproceedings{Barik2017,
+    title = {{Do Developers Read Compiler Error Messages?}},
     year = {2017},
-    author = {Barik, Titus and Smith, Justin and Lubick, Kevin and Holmes, Elisabeth and Feng, Jing and Murphy-hill, Emerson and Parnin, Chris},
-    pages = {575--585},
+    booktitle = {ICSE},
+    author = {Barik, T. and Smith, J. and Lubick, K. and Holmes, E. and Feng, J. and Murphy-Hill, E. and Parnin, C.},
+    publisher = {IEEE},
     doi = {10.1109/ICSE.2017.59},
     keywords = {-compiler errors, eye tracking, ficulty of reading error, integrated develop-, ment environments, messages is comparable to, programmer comprehension, reading, the, visual}
 }
 
-@article{Heo2017,
+@inproceedings{Heo2017,
     title = {{Machine-Learning-Guided Selectively Unsound Static Analysis}},
     year = {2017},
-    journal = {Icse},
-    author = {Heo, Kihong and Oh, Hakjoo and Yi, Kwangkeun},
-    pages = {519--529},
+    booktitle = {ICSE},
+    author = {Heo, K. and Oh, H. and Yi, K.},
     isbn = {978-1-5386-3868-2},
     doi = {10.1109/ICSE.2017.54},
     keywords = {-static analysis, machine learning, unsoundness}
@@ -11795,22 +11783,18 @@
 
 @article{Problem,
     title = {{The Science of Brute Force}},
-    author = {Problem, Pythagorean Triples}
+    year = {2017},
+    journal = {Communications of the ACM},
+    author = {Heule, M. J. H. and Kullmann, O.},
+    number = {8},
+    volume = {60}
 }
 
-@article{Alglave2015,
+@inproceedings{Alglave2015,
     title = {{GPU Concurrency: Weak Behaviours and Programming Assumptions}},
     year = {2015},
-    journal = {Proceedings of the Twentieth International Conference on Architectural Support for Programming Languages and Operating Systems - ASPLOS '15},
-    author = {Alglave, Jade and Batty, Mark and Donaldson, Alastair F. and Gopalakrishnan, Ganesh and Ketema, Jeroen and Poetzl, Daniel and Sorensen, Tyler and Wickerson, John},
-    number = {1},
-    pages = {577--591},
-    volume = {43},
-    url = {http://dl.acm.org/citation.cfm?id=2694344.2694391%5Cnhttp://dl.acm.org/citation.cfm?doid=2694344.2694391},
-    isbn = {9781450328357},
-    doi = {10.1145/2694344.2694391},
-    issn = {0163-5964},
-    pmid = {1571529},
+    booktitle = {ASPLOS},
+    author = {Alglave, J. and Batty, M. and Donaldson, A. and Gopalakrishnan, G. and Ketema, J. and Poetzl, D. and Sorensen, T. and Wickerson, J.},
     keywords = {GPU, Nvidia PTX, formal model, litmus testing, memory consistency, openCL, test generation}
 }
 
@@ -11819,9 +11803,4 @@
     year = {2017},
     booktitle = {INRIA Paris-Rocquencourt},
     author = {Leroy, X.}
-}
-
-@article{McnallyFuzzingArt,
-    title = {{Fuzzing : The State of the Art}},
-    author = {Mcnally, Richard and Yiu, Ken and Grove, Duncan}
 }
