--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -1,40 +1,45 @@
 \section{Comparison to State-of-the-art}\label{sec:vs_clsmith}
 
-In this section we compare our approach against CLSmith, the state-of-the-art in OpenCL compiler testing. For each of the 10 OpenCL configurations, we run the 48 consecutive
-
-Total runtime for a test-cases consists of the generation time, the time to execute the test harness on a configuration.
-
-Both testing frameworks were used for 48 hours each. CLSmith was configured with default settings. CLReduce was configured with the default settings (four parallel reduction threads).
-
-%\subsection{Experimental Setup}
-%
-%Each OpenCL configuration from Table~\ref{tab:platforms} was configured to run DeepSmith and CLSmith test-cases for 48 hours. This includes the time taken to generate and execute the test-case. All experimental platforms were otherwise unloaded.
+In this section we compare DeepSmith to CLSmith~\cite{Lidbury2015a}, the state-of-the-art in OpenCL compiler testing.
 
 \subsection{Experimental Setup}
 
-We replicated the experimental setup of our earlier tests, but this time allowing DeepSmith and CLSmith to run for 48 hours each. Both systems were ran with their default settings.
+We ran each program generator using its default configuration for 48 hours on each of the 10 OpenCL configurations of Table~\ref{tab:platforms}. We ran the tests twice, first with optimizations disabled ($-$), then with optimizations enabled ($+$). Total runtime for a test-case consists of the generation time, and the time to execute the test-case. For DeepSmith, the time to generate test-harness is included.
 
 
 \subsection{Results Overview}
 
-Table~\ref{tab:outcomes} shows the outcomes of 48 hours of consecutive testing for each of the platforms from Table~\ref{tab:platforms}. We repeated the experiment twice, once with compiler optimizations disabled ($-$) for all configurations, and once with optimizations enabled ($+$).
+\begin{table*}
+  \scriptsize %
+  \centering %
+  \input{build/tab/outcomes}
+  \caption{%
+    Results from 48 hours of testing using CLSmith and DeepSmith. Configuration \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote build failure (\textbf{bf}), build crash (\textbf{bc}), build timeout (\textbf{bto}), runtime crash (\textbf{c}), timeout (\textbf{to}), and passed (\textbf{\cmark}) outcomes for CLSmith and DeepSmith, respectively.%
+  }
+  \label{tab:outcomes}
+\end{table*}
 
-83.8\% of CLSmith test-cases produce a majority \textbf{\cmark} outcome. Proportionally, DeepSmith test-cases are less likely to produce a majority outcome at 47.9\% of the total.
+Table~\ref{tab:outcomes} shows the outcomes of 48 hours of consecutive testing for each of the platforms from Table~\ref{tab:platforms}, with compiler optimizations disabled ($-$) and optimizations enabled ($+$).
 
-An average of XX CLSmith and XX DeepSmith test-cases were evaluated on each device, with an average time per test-case of XX and XX respectively. The XX-fold increase in testing throughput achieved by DeepSmith is a result of XXX. Figure~\ref{fig:runtimes} shows runtimes. For DeepSmith, generation time scales linearly with program size (benchmarked at 465 cps). We also include test harness overhead, though this could be implemented away. Disabling optimizaitons generally does not affect testing throughput significantly, with the exception of Config XX, in which the slow compilation of kernels containing structs greatly reduces the number of test-cases evaluated. This is a known issue --- in XX the authors omnit testing on this configuration for this reason.
+An average of XX CLSmith and XX DeepSmith test-cases were evaluated on each device, with an average time per test-case of XX and XX respectively. The XX-fold increase in testing throughput achieved by DeepSmith is a result of XXX. Figure~\ref{fig:runtimes} shows the times taken to generate and execute test-cases. DeepSmith generation time is proportional to program length, benchmarked at an average 465 chars / second. For Clsmith, generation time depends on the number of rejections which are required before production of statically verified code is correct \cc{ldots}.
 
-Column \textbf{bc} is of immediate value for developers; for all other outcomes, voting heuristics are required to expose anomalous results. CLSmith crashed 8 of the 20 configurations, DeepSmith crashed all of them. See Section X for examples of bugs found from build crashes.
+Optimization level generally does not affect testing throughput significantly, with the exception of Config.\ $7+$, in which the slow compilation of kernels containing structs greatly reduces the number of test-cases evaluated. This is a result of CLSmith's heavy reliance on structs, and is a known issue --- in XX the authors omnit testing on this configuration for this reason.
+
+83.8\% of CLSmith test-cases produce a majority \textbf{\cmark} outcome. Proportionally, DeepSmith test-cases are less likely to produce a majority outcome at 47.9\% of the total. Neither CLSmith or DeepTune guarantee program termination with XX\% of non-\textbf{\{bf,c\}} majority outcomes reaching 60 seconds timeouts.
+
+
+\subsection{Comparison of Configurations}
+
+CLSmith crashed 8 of the 20 configurations, DeepSmith crashed all of them. See Section X for examples of bugs found from build crashes.
+
+For all except configuration $3\pm$, DeepSmith exposes more compiler crashes than CLSmith. On average, DeepSmith hangs the compiler more frequently. \cc{\ldots}
 
 The integrated GPU Conifgs.\ we tested ($3\pm$) frequently failed to compile CLSmith kernels, resulting in thousands of compiler crashes \textbf{bc} or timeouts \textbf{bc}.
 % SELECT stderr,COUNT(*) FROM CLSmithResults LEFT JOIN CLSmithMetas ON CLSmithResults.id=CLSmithMetas.id WHERE testbed_id=13 AND CLSmithResults.outcome='bc' AND cumtime < 48 * 3600 GROUP BY CLSmithResults.stderr;
 Of the build crashes, 68\% failed silently, and the remainder were caused by the same pointer assignment assertion for which DeepSmith generated a 4 line test-case in Figure~\ref{lst:intel-llvm-assertion}. \cc{We also generated silent build crashes, but with an average line count of XX, versus CLSmith's line count of XX.}
 
-For all except configuration $3\pm$, DeepSmith exposes more compiler crashes than CLSmith. On average, DeepSmith hangs the compiler more frequently. We also submitted XX of the bugs found using CLSmith, after reduction.
-
 % 622 total bc
 Configs.\ $4$, $5$, $6$, and $7$ have a number CLSmith bc outcomes when optimizations are enabled. Of the non-silent crashes, the cause is the OpenCL vectorizer pass, same as Figure~\ref{lst:intel-vectorizer-segfault}.
-
-\cc{Config.\ $7+$ has a lot of \textbf{bto}s. Why?}
 
 \cc{Configs.\ $4$, $6$ are the same driver on different hardware, and exhibit similar behavior}
 
@@ -56,35 +61,29 @@ Table~\ref{tab:classifications} shows the results of applying voting heuristics 
 \begin{table*}
 	\scriptsize %
 	\centering %
-	\input{build/tab/outcomes}
-	\caption{Results from 48 hours of testing using CLSmith and DeepSmith. Configuration \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote build failure (\textbf{bf}), build crash (\textbf{bc}), build timeout (\textbf{bto}), runtime crash (\textbf{c}), timeout (\textbf{to}), and passed (\textbf{\cmark}) outcomes for CLSmith and DeepSmith, respectively.}
-	\label{tab:outcomes}
-\end{table*}
-
-\begin{table*}
-	\scriptsize %
-	\centering %
 	\input{build/tab/megatable}
-	\caption{Using voting heuristics and automated filtering to expose anomalous results from 48 hours of testing using CLSmith and DeepSmith. Columns denote anomalous-output (ao), anomalous build failure (\textbf{abf}), anomalous runtime crash (\textbf{ac}), and anomalous timeout (\textbf{ato}) classifications for CLSmith and DeepSmith, respectively.}
+	\caption{Using voting heuristics to expose anomalous results from 48 hours of testing using CLSmith and DeepSmith. Columns denote anomalous-output (ao), anomalous build failure (\textbf{abf}), anomalous runtime crash (\textbf{ac}), and anomalous timeout (\textbf{ato}) classifications for CLSmith and DeepSmith, respectively.}
 	\label{tab:classifications}
 \end{table*}
 
-\cc{TODO: How long do reductions take? How many DeepSmith test-cases can we run in that amount of time? Given the ratio of interesting DeepSmith test-cases, how many more bugs could we find in the amount of time it takes to run a single reduction?}
-
-\cc{TODO: We note that we tested the wrong-code classification of CLSmith, finding that it does not affect the number of CLSmith wrong-code bugs.}
-
-The 2357 \textbf{bf} results for CLSmith on Configs.\ $4\pm$ and $6\pm$ are all a result of compilers rejecting empty declarations, (e.g. \texttt{int;}) which CLSmith occasionally emits. This is a known CLSmith issue which will likely be addressed.
+The 2357 \textbf{abf} results for CLSmith on Configs.\ $4\pm$ and $6\pm$ are all a result of compilers rejecting empty declarations, (e.g. \texttt{int;}) which CLSmith occasionally emits. This is a known CLSmith issue which will likely be addressed.
 % https://github.com/ChrisLidbury/CLSmith/issues/7
 Similarly, Intel Configs.\ 4--7 (but not 3) reject DeepSmith kernels which omit a type specified (e.g. \texttt{\_\_global* a}), whereas all other Configs.\ (including 3) emit and warning and default to \texttt{int} type.
-
-
-Oclgrind was resilient to CLSmith testing, yet we managed to trip it up during compilation, and discovered the switch race condition.
 
 % Anomalous build failures
 Configs.\ $1\pm$, $2\pm$ reject kernels which \texttt{size\_t} parameters.
 
 
 \subsection{Comparison of test-cases}
+
+\begin{figure}
+	\centering %
+	\includegraphics[width=\columnwidth]{build/img/kernel-sizes}%
+	\caption{%
+		Kernel line counts, grouped by outcome. DeepSmith test-cases are on average two orders of magnitude smaller than CLSmith.%
+	}%
+	\label{fig:kernel-sizes} %
+\end{figure}
 
 \paragraph{Test-case Size}
 %SELECT MIN(linecount) as minlen,
@@ -123,10 +122,7 @@ Average CLgen kernel is 20 lines long.
 % WHERE cumtime < 48 * 3600;
 Over the course of testing, a combined $3.39 \times 10^8$ of CLSmith code was evaluated, compared to $3.76 \times 10^6$ lines of DeepSmith code.
 
-% How many GitHub kernels contain 'struct's?
-% $ ls | xargs grep -l struct -- | wc -l
-% 331
-CLSmith is biased towards identifying struct miscompilations, though only 7.1\% of OpenCL kernels on GitHub use them.
+\paragraph{Test-case Reduction} We used a modified version of C-Reduce which supports OpenCL~\cite{Pflanzer2016} to perform automatic test-case, using the default settings. The available implementation supports reduction only of anomalous-output test-cases, though this could be extended to support other outcomes (we did not do this). Test-case reduction is a time-consuming process, even with the parallelized implementation. Figure~\ref{fig:kernel-sizes} shows the runtimes of reductions, and Figure~\cc{TODO} shows the test-case sizes before and after reduction. For CLSmith-generated kernels, test case reduction is necessary to expose the problematic code from within the hundreds of lines of generated program. DeepSmith kernels are on average an order of magnitude smaller. We found that reduction \ldots
 
 % Average GitHub charchounts: 1451
 % Average GitHub linecounts: 53
@@ -208,20 +204,20 @@ DeepSmith also triggered \emph{unreachable!} compiler errors in 180 distinct tes
 \cc{What is the bug rate per line of code?}
 
 
-\subsection{Reductions}
+\paragraph{Bug Diversity}
 
-C-Reduce extensions to support OpenCL~\cite{Pflanzer2016}.
+Hard to quantify, but our results suggest the value of our syntactic approach.
 
+% How many GitHub kernels contain 'struct's?
+% $ ls | xargs grep -l struct -- | wc -l
+% 331
+CLSmith is biased towards identifying struct miscompilations, though only 7.1\% of OpenCL kernels on GitHub use them.
 
-\begin{figure}
-	\centering %
-	\includegraphics[width=\columnwidth]{build/img/kernel-sizes}%
-	\caption{%
-		Kernel line counts, grouped by outcome. DeepSmith test-cases are on average two orders of magnitude smaller than CLSmith.%
-	}%
-	\label{fig:kernel-sizes} %
-\end{figure}
+By not explicitly stress-testing the middle-end, we discover a wider variety of bugs. E.g. compiler crashes, compiler timeouts, etc.
 
+Oclgrind was resilient to CLSmith testing, yet we managed to trip it up during compilation, and discovered the switch race condition.
+
+Overall, CLSmith is better at finding miscompilations. We believe our approach to be complimentary.
 
 %\begin{figure}
 %	\centering %
