--- a/sec/motivation.tex
+++ b/sec/motivation.tex
@@ -45,7 +45,7 @@
 
 \begin{figure}
   \centering %
-  \subfloat[This widely used pattern of integer comparison to thread ID is miscompiled on two compilers when optimizations are enabled and the integer literal is negative, causing the \texttt{if} statement to be executed (hand-reduced version of Figure~\ref{lst:intel-size_t-int}).]{%
+  \subfloat[This widely used pattern of integer comparison to thread ID is miscompiled on two compilers when optimizations are enabled and the integer literal is negative, causing the \texttt{if} statement to be executed (hand-reduced version of Figure~\ref{lst:intel-size_t-int-unreduced}).]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\IntelSizetIntReduced}}}%
     \label{lst:intel-size_t-int-reduced}
   }\\%
